--- a/01-styles/style.scss
+++ b/01-styles/style.scss
@@ -1,85 +1,206 @@
+@import "variables";
+
+
 /* basic elements */
-
-$basecolor: black;
-
 html {
-  margin: 0;
-  padding: 0;
-  }
+	margin: 0;
+	padding: 0;
+}
+
 body {
-  font: 75% georgia, sans-serif;
-  line-height: 1.88889;
-  color: #555753;
-  background: #fff url(blossoms.jpg) no-repeat bottom right;
-  margin: 0;
-  padding: 0;
-  }
+	font: 75% georgia, sans-serif;
+	line-height: 1.88889;
+	color: $base-font-color;
+	background: $base-background-color url(blossoms.jpg) no-repeat bottom right;
+	margin: 0;
+	padding: 0;
+}
+
 p {
-  margin-top: 0;
-  text-align: justify;
-  }
-h3 {
-  font: italic normal 1.4em georgia, sans-serif;
-  letter-spacing: 1px;
-  margin-bottom: 0;
-  color: #7D775C;
-  }
-
-a {
-  font-weight: bold;
-  text-decoration: none;
-  color: $basecolor;
-
-  &:link {
-    color: $basecolor;
-  }
-  &:visited {
-
-  }
-  &:hover,&:focus,&:active {
-
-  }
+	margin-top: 0;
+	text-align: justify;
 }
 
 h3 {
-  color: $basecolor;
+	font: italic normal 1.4em georgia, sans-serif;
+	letter-spacing: 1px;
+	margin-bottom: 0;
+	color: $base-h3-color;
 }
 
-@heading ($margin-top, $width) {
-  background: transparent url(h1.gif) no-repeat top left;
-  margin-top: 10px;
-  display: block;
-  width: 219px;
-  height: 87px;
-  float: left;
+a:link {
+	font-weight: bold;
+	text-decoration: none;
+	color: $base-link-color;
+}
 
-  text-indent: 100%;
-  white-space: nowrap;
-  overflow: hidden;
+a:visited {
+	font-weight: bold;
+	text-decoration: none;
+	color: $base-link-visited-color;
+}
+
+a:hover, a:focus, a:active {
+	text-decoration: underline;
+	color: $base-link-action-color;
+}
+
+abbr {
+	border-bottom: none;
+}
+
+
+/* specific divs */
+.page-wrapper {
+	background: url(zen-bg.jpg) no-repeat top left;
+	padding: 0 175px 0 110px;
+	margin: 0;
+	position: relative;
+}
+
+.intro {
+	min-width: 470px;
+	width: 100%;
 }
 
 header h1 {
-  @include heading(58px, 200px)
+	background: transparent url(h1.gif) no-repeat top left;
+	margin-top: 10px;
+	display: block;
+	width: 219px;
+	height: 87px;
+	float: left;
+
+	text-indent: 100%;
+	white-space: nowrap;
+	overflow: hidden;
 }
 
 header h2 {
-  @include heading(20px, 230px)
+	background: transparent url(h2.gif) no-repeat top left;
+	margin-top: 58px;
+	margin-bottom: 40px;
+	width: 200px;
+	height: 18px;
+	float: right;
+
+	text-indent: 100%;
+	white-space: nowrap;
+	overflow: hidden;
+}
+
+header {
+	padding-top: 20px;
+	height: 87px;
+}
+
+.summary {
+	clear: both;
+	margin: 20px 20px 20px 10px;
+	width: 160px;
+	float: left;
+}
+
+.summary p {
+	font: italic 1.1em/2.2 georgia;
+	text-align: center;
+}
+
+.preamble {
+	clear: right;
+	padding: 0px 10px 0 10px;
+}
+
+.supporting {
+	padding-left: 10px;
+	margin-bottom: 40px;
+}
+
+footer {
+	text-align: center;
+}
+
+footer a:link, footer a:visited {
+	margin-right: 20px;
+}
+
+.sidebar {
+	margin-left: 600px;
+	position: absolute;
+	top: 0;
+	right: 0;
+}
+
+.sidebar .wrapper {
+	font: 10px verdana, sans-serif;
+	background: transparent url(paper-bg.jpg) top left repeat-y;
+	padding: 10px;
+	margin-top: 150px;
+	width: 130px;
+}
+
+.sidebar h3.select {
+	background: transparent url(h3.gif) no-repeat top left;
+	margin: 10px 0 5px 0;
+	width: 97px;
+	height: 16px;
+
+	text-indent: 100%;
+	white-space: nowrap;
+	overflow: hidden;
+}
+
+.sidebar h3.archives {
+	background: transparent url(h5.gif) no-repeat top left;
+	margin: 25px 0 5px 0;
+	width:57px;
+	height: 14px;
+
+	text-indent: 100%;
+	white-space: nowrap;
+	overflow: hidden;
+}
+
+.sidebar h3.resources {
+	background: transparent url(h6.gif) no-repeat top left;
+	margin: 25px 0 5px 0;
+	width:63px;
+	height: 10px;
+
+	text-indent: 100%;
+	white-space: nowrap;
+	overflow: hidden;
 }
 
 
+.sidebar ul {
+	margin: 0;
+	padding: 0;
+}
+
+.sidebar li {
+	line-height: 1.3em;
+	background: transparent url(cr1.gif) no-repeat top center;
+	display: block;
+	padding-top: 5px;
+	margin-bottom: 5px;
+	list-style-type: none;
+}
+
+.sidebar li a:link {
+	color: $sidebar-link-color;
+}
+
+.sidebar li a:visited {
+	color: $sidebar-link-visited-color;
+}
 
 
-
-
-header h2 {
-  background: transparent url(h2.gif) no-repeat top left;
-  margin-top: 58px;
-  margin-bottom: 40px;
-  width: 200px;
-  height: 18px;
-  float: right;
-
-  text-indent: 100%;
-  white-space: nowrap;
-  overflow: hidden;
-  }
+.extra1 {
+	background: transparent url(cr2.gif) top left no-repeat;
+	position: absolute;
+	top: 40px;
+	right: 0;
+	width: 148px;
+	height: 110px;
+}
