--- a/01-styles/style.scss
+++ b/01-styles/style.scss
@@ -32,17 +32,15 @@ a:link {
 	font-weight: bold;
 	text-decoration: none;
 	color: $base-link-color;
-}
 
-a:visited {
-	font-weight: bold;
-	text-decoration: none;
-	color: $base-link-visited-color;
-}
+    &:visited {
+      color: $base-link-visited-color;
+    }
 
-a:hover, a:focus, a:active {
-	text-decoration: underline;
-	color: $base-link-action-color;
+    &:hover, &:focus, &:active {
+      text-decoration: underline;
+      color: $base-link-action-color;
+    }
 }
 
 abbr {
