--- a/01-styles/style.scss
+++ b/01-styles/style.scss
@@ -34,12 +34,12 @@ a:link {
 	color: $base-link-color;
 
     &:visited {
-      color: $base-link-visited-color;
+      	color: $base-link-visited-color;
     }
 
     &:hover, &:focus, &:active {
-      text-decoration: underline;
-      color: $base-link-action-color;
+      	text-decoration: underline;
+      	color: $base-link-action-color;
     }
 }
 
@@ -66,29 +66,29 @@ header {
 	height: 87px;
 
 	h1 {
-	  background: transparent url(h1.gif) no-repeat top left;
-	  margin-top: 10px;
-	  display: block;
-	  width: 219px;
-	  height: 87px;
-	  float: left;
+		background: transparent url(h1.gif) no-repeat top left;
+		margin-top: 10px;
+		display: block;
+		width: 219px;
+		height: 87px;
+		float: left;
 
-	  text-indent: 100%;
-	  white-space: nowrap;
-	  overflow: hidden;
+		text-indent: 100%;
+		white-space: nowrap;
+		overflow: hidden;
 	}
 
     h2 {
-      background: transparent url(h2.gif) no-repeat top left;
-      margin-top: 58px;
-      margin-bottom: 40px;
-      width: 200px;
-      height: 18px;
-      float: right;
+		background: transparent url(h2.gif) no-repeat top left;
+		margin-top: 58px;
+		margin-bottom: 40px;
+		width: 200px;
+		height: 18px;
+		float: right;
 
-      text-indent: 100%;
-      white-space: nowrap;
-      overflow: hidden;
+		text-indent: 100%;
+		white-space: nowrap;
+		overflow: hidden;
     }
 }
 
@@ -116,10 +116,10 @@ header {
 
 footer {
 	text-align: center;
-}
 
-footer a:link, footer a:visited {
-	margin-right: 20px;
+	a:link, a:visited {
+	  	margin-right: 20px;
+	}
 }
 
 .sidebar {
