split up basic and specific elements into partials

--- a/01-styles/style.scss
+++ b/01-styles/style.scss
@@ -1,173 +1,9 @@
 @import "variables";
 @import "mixins";
 
-
-/* basic elements */
-html {
-	margin: 0;
-	padding: 0;
-}
-
-body {
-  	@extend html;
-
-	font: 75% georgia, sans-serif;
-	line-height: 1.88889;
-	color: $base-font-color;
-	background: $base-background-color url(blossoms.jpg) no-repeat bottom right;
-}
-
-p {
-	margin-top: 0;
-	text-align: justify;
-}
-
-h3 {
-	font: italic normal 1.4em georgia, sans-serif;
-	letter-spacing: 1px;
-	margin-bottom: 0;
-	color: $base-h3-color;
-}
-
-a:link {
-	font-weight: bold;
-	text-decoration: none;
-	color: $base-link-color;
-
-    &:visited {
-      	color: $base-link-visited-color;
-    }
-
-    &:hover, &:focus, &:active {
-      	text-decoration: underline;
-      	color: $base-link-action-color;
-    }
-}
-
-abbr {
-	border-bottom: none;
-}
+@import "basic-elements";
+@import "specific-elements";
 
 
-/* specific divs */
-.page-wrapper {
-	background: url(zen-bg.jpg) no-repeat top left;
-	padding: 0 175px 0 110px;
-	margin: 0;
-	position: relative;
-}
-
-.intro {
-	min-width: 470px;
-	width: 100%;
-}
-
-header {
-	padding-top: 20px;
-	height: 87px;
-
-	h1 {
-	  	@include header("h1.gif", 10px, 10px, 219px, 87px, left);
-	}
-
-    h2 {
-	  	@include header("h2.gif", 58px, 40px, 200px, 18px, right);
-    }
-}
-
-.summary {
-	clear: both;
-	margin: 20px 20px 20px 10px;
-	width: 160px;
-	float: left;
-
-	p {
-		font: italic 1.1em/2.2 georgia;
-		text-align: center;
-	}
-}
-
-.preamble {
-	clear: right;
-	padding: 0 10px 0 10px;
-}
-
-.supporting {
-	padding-left: 10px;
-	margin-bottom: 40px;
-}
-
-footer {
-	text-align: center;
-
-	a:link, a:visited {
-	  	margin-right: 20px;
-	}
-}
-
-.sidebar {
-	margin-left: 600px;
-	position: absolute;
-	top: 0;
-	right: 0;
 
 
-	.wrapper {
-		font: 10px verdana, sans-serif;
-		background: transparent url(paper-bg.jpg) top left repeat-y;
-		padding: 10px;
-		margin-top: 150px;
-		width: 130px;
-	}
-
-	h3 {
-		text-indent: 100%;
-		white-space: nowrap;
-		overflow: hidden;
-
-		&.select {
-		  	@include sidebar-header("h3.gif", 10px, 97px, 16px);
-		}
-
-		&.archives {
-		  	@include sidebar-header("h5.gif", 25px, 57px, 14px);
-		}
-
-		&.resources {
-		  	@include sidebar-header("h6.gif", 25px, 63px, 10px);
-		}
-	}
-
-	ul {
-		margin: 0;
-		padding: 0;
-
-		li {
-			line-height: 1.3em;
-			background: transparent url(cr1.gif) no-repeat top center;
-			display: block;
-			padding-top: 5px;
-			margin-bottom: 5px;
-			list-style-type: none;
-
-		  	a {
-			 	&:link {
-				  	color: $sidebar-link-color;
-				}
-
-				&:visited {
-				  	color: $sidebar-link-visited-color;
-				}
-			}
-		}
-	}
-}
-
-.extra1 {
-	background: transparent url(cr2.gif) top left no-repeat;
-	position: absolute;
-	top: 40px;
-	right: 0;
-	width: 148px;
-	height: 110px;
-}
