[feature] add repositories template

--- a/04-dev/app/assets/scripts/templates/profile.hbs
+++ b/04-dev/app/assets/scripts/templates/profile.hbs
@@ -1,25 +1,25 @@
 <h2>Profile</h2>
 <div class="row">
 	<div class="col-md-3">
-		<img src="{{profiledata.avatar_url}}" width="300" height="300">
+		<img src="{{profileData.avatar_url}}" width="300" height="300">
 	</div>
 	<div class="col-md-6 profile">
 		<div class="row">
 			<h4>Name</h4>
-			<p>{{profiledata.name}}</p>
+			<p>{{profileData.name}}</p>
 		</div>
 		<div class="row">
 			<h4>Github-Name</h4>
-			<p>{{profiledata.login}}</p>
+			<p>{{profileData.login}}</p>
 		</div>
 		<div class="row">
 			<h4>Location</h4>
-			<p>{{profiledata.location}}</p>
+			<p>{{profileData.location}}</p>
 		</div>
 		<div class="row">
-			{{#if profiledata.bio}}
+			{{#if profileData.bio}}
 				<h4>Bio</h4>
-				<p>{{profiledata.bio}}</p>
+				<p>{{profileData.bio}}</p>
 			{{else}}
 				<h4>Bio</h4>
 				<p>not available</p>
