--- a/04-dev/app/assets/scripts/templates/repositories.hbs
+++ b/04-dev/app/assets/scripts/templates/repositories.hbs
@@ -18,7 +18,8 @@
                 </button>
             </td>
             <td>
-				<a href="{{replace commits_url "{/sha}" "/master"}}" rel="external" target="_blank">
+				<!--<a href="{{replace commits_url "{/sha}" "/master"}}" rel="external" target="_blank">-->
+                <a href="/repos/{{owner.login}}/{{name}}/commits" rel="external" target="_blank">
                 	<span class="glyphicon glyphicon-new-window" aria-hidden="true"></span>
             	</a>
 			</td>
