[feature] add possibility for chosing username

--- a/04-dev/app/assets/scripts/templates/home.hbs
+++ b/04-dev/app/assets/scripts/templates/home.hbs
@@ -1,2 +1,10 @@
 <h2>Home</h2>
-<p>Here you get all information about Michael Andorfer</p>
+<p>Here you get Github information about a specific user</p>
+<br>
+<div id="form-group-username" class="form-group col-md-5 com-md-offset-0">
+	<label for="username">Github Username:</label>
+	<input type="text" class="form-control" id="username" placeholder="Insert a username and press enter">
+	<p id="username-error" class="username-error" style="display: none">Username not found! Prove your insertion and press enter again!</p>
+	<p id="username-success" class="username-success" style="display: none">Username found! Username set!</p>
+</div>
+
