--- a/04-dev/app/assets/styles/app.less
+++ b/04-dev/app/assets/styles/app.less
@@ -12,3 +12,13 @@
 p {
 	font-size: 18px;
 }
+
+#form-group-username .username-success {
+	color: #3c763d;
+	font-size: 14px;
+}
+
+#form-group-username .username-error {
+	color: #a94442;
+	font-size: 14px;
+}
