[refactor] rename Github mentions to GitHub

--- a/04-dev/app/assets/scripts/templates/home.hbs
+++ b/04-dev/app/assets/scripts/templates/home.hbs
@@ -2,7 +2,7 @@
 <p>Here you get Github information about a specific user</p>
 <br>
 <div id="form-group-username" class="form-group col-md-5 com-md-offset-0">
-	<label for="username">Github Username:</label>
+	<label for="username">GitHub Username:</label>
 	<input type="text" class="form-control" id="username" placeholder="Insert a username and press enter">
 	<p id="username-error" class="username-error" style="display: none">Username not found! Prove your insertion and press enter again!</p>
 	<p id="username-success" class="username-success" style="display: none">Username found! Username set!</p>
