--- a/04-dev/app/assets/scripts/templates/profile.hbs
+++ b/04-dev/app/assets/scripts/templates/profile.hbs
@@ -9,7 +9,7 @@
 			<p>{{profileData.name}}</p>
 		</div>
 		<div class="row">
-			<h4>Github-Name</h4>
+			<h4>GitHub Username</h4>
 			<p>{{profileData.login}}</p>
 		</div>
 		<div class="row">
