--- a/04-dev/app/assets/scripts/templates/contact.hbs
+++ b/04-dev/app/assets/scripts/templates/contact.hbs
@@ -9,7 +9,7 @@
 			<p>{{contactData.name}} Andorfer</p>
 		</div>
 		<div class="row">
-			<h4>Github-Name</h4>
+			<h4>GitHub Username</h4>
 			<p>{{contactData.login}}</p>
 		</div>
 		<div class="row">
