--- a/04-dev/app/assets/scripts/templates/followers.hbs
+++ b/04-dev/app/assets/scripts/templates/followers.hbs
@@ -1,8 +1,8 @@
 <h2>Repositories</h2>
 <table class="table table-condensed table-responsive">
     <thead>
-        <th>Github Username</th>
-		<th>Github URL</th>
+        <th>GitHub Username</th>
+		<th>GitHub URL</th>
     </thead>
     <tbody>
 	{{#each followersData}}
