--- a/06-diagrams/app/scripts/templates/home.hbs
+++ b/06-diagrams/app/scripts/templates/home.hbs
@@ -54,3 +54,8 @@
     </table>
   </div>
 </div>
+<h2>Piechart</h2>
+<h5>Shows the percentage each nationality has according to the count of teams since Formula1 was found.</h5>
+<div class="row">
+    <div id="chart4" class="col-sm-12"></div>
+</div>
