--- a/06-diagrams/app/scripts/templates/home.hbs
+++ b/06-diagrams/app/scripts/templates/home.hbs
@@ -59,3 +59,7 @@
 <div class="row">
     <div id="chart4" class="col-sm-12"></div>
 </div>
+<h2>Geo 2</h2>
+<div class="row">
+    <div id="chart5" class="col-sm-12"></div>
+</div>
