[feature] implement google-map with svg overlay which shows the austrian state borders and arms

--- a/06-diagrams/app/scripts/templates/home.hbs
+++ b/06-diagrams/app/scripts/templates/home.hbs
@@ -61,5 +61,7 @@
 </div>
 <h2>Geo 2</h2>
 <div class="row">
-    <div id="chart5" class="col-sm-12"></div>
+    <div id="chart5">
+        <div id="map"></div>
+    </div>
 </div>
