--- a/06-diagrams/app/styles/app.less
+++ b/06-diagrams/app/styles/app.less
@@ -28,3 +28,28 @@ body {
   fill: red;
   font-size: 40px;
 }
+
+#map-wrap {
+  width: 500px;
+  height: 500px;
+  overflow: hidden;
+}
+
+#map {
+  width: 1000px;
+  height: 750px;
+}
+
+.svg-overlay, .svg-overlay svg {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.svg-overlay path {
+  stroke: Red;
+  stroke-width: 2px;
+  fill: Red;
+  fill-opacity: 0.3;
+}
+
